--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^1.7.9"
+    "electron": "^1.7.9",
+    "electron-rebuild": "^1.6.0"
   },
   "dependencies": {
     "async": "^2.6.0",
+    "avrgirl-arduino": "^2.2.7",
     "electron-log": "^2.2.12",
     "mkdirp": "^0.5.1",
     "path": "^0.12.7",
