--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "dist:win": "electron-builder -w"
   },
   "author": "BQ",
   "license": "GPL-3.0",
@@ -49,7 +50,6 @@
       ]
     },
     "mac": {
-      "category": "public.app-category.education",
       "files": [
         "res/arduino_ide/darwin",
         "res/drivers/darwin"
@@ -57,6 +57,26 @@
       "asarUnpack": [
         "res/arduino_ide/darwin",
         "res/drivers/darwin"
+      ],
+      "category": "public.app-category.education"
+    },
+    "win": {
+      "files": [
+        "res/arduino_ide/darwin",
+        "res/drivers/darwin"
+      ],
+      "asarUnpack": [
+        "res/arduino_ide/win32",
+        "res/drivers/win32"
+      ],
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
       ]
     }
   }
